--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,7 @@
   main {
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
   }
   
   /* about me styles */
@@ -237,7 +238,7 @@
     #about-me,
     #contact {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       align-items: center;
       justify-content: flex-start;
     }
